--- a/modulo-01-fundamentos/bloco-03-introducao-a-html-e-css/dia-03-html-e-css-seletores-e-posicionamento/style-02.css
+++ b/modulo-01-fundamentos/bloco-03-introducao-a-html-e-css/dia-03-html-e-css-seletores-e-posicionamento/style-02.css
@@ -14,14 +14,15 @@
 
 .baloon {
     position: absolute;
-    left: 450px;
+    left: 475px;
 }
 
 .speach {
     font-size: 25px;
     position: absolute;
-    top: 150px;
-    left: 200px;
+    top: 125px;
+    left: 495px;
+    z-index: 2;
 }
 
 .bowser {
