--- a/modulo-01-fundamentos/bloco-06-html-e-css-forms-flexbox-e-responsivo/dia-01-html-e-css-forms/exercicio-03/style.css
+++ b/modulo-01-fundamentos/bloco-06-html-e-css-forms-flexbox-e-responsivo/dia-01-html-e-css-forms/exercicio-03/style.css
@@ -4,14 +4,6 @@
   box-sizing: border-box;
 }
 
-header {
-  text-align: center;
-  width: 80%;
-  margin: 0 auto 15px auto;
-}
-
-main {
-  text-align: center;
-  width: 80%;
-  margin: 0 auto 15px auto;
+.container {
+  padding-bottom: 15px;
 }
