--- a/modulo-01-fundamentos/bloco-06-html-e-css-forms-flexbox-e-responsivo/dia-03-css-flexbox-parte-01/exercicio-01/style.css
+++ b/modulo-01-fundamentos/bloco-06-html-e-css-forms-flexbox-e-responsivo/dia-03-css-flexbox-parte-01/exercicio-01/style.css
@@ -1,16 +1,25 @@
-.box {
-  color: #9069EF;
-  background-color: rgb(243, 243, 243);
-  border: 2px solid #232525;
-  font-size: 50px;
-  height: 60px;
-  margin: 10px 5px;
-  text-align: center;
-  width: 30%;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.box-container {
-  background-color: #0fa36b;
+header {
+  width: 100%;
   display: flex;
-  flex-flow: row nowrap;
+  justify-content: space-around;
+  align-items: center;
+  font-size: 15px;
+  color: white;
+  background-color: rgb(61, 61, 61);
+}
+
+#logo-trybe {
+  width: 70px;
+  display: flex;
+  align-items: center;
+}
+
+#sign-up {
+  color: white;
 }
