--- a/modulo-01-fundamentos/bloco-06-html-e-css-forms-flexbox-e-responsivo/dia-04-css-flexbox-parte-02/exercicio-01/style.css
+++ b/modulo-01-fundamentos/bloco-06-html-e-css-forms-flexbox-e-responsivo/dia-04-css-flexbox-parte-02/exercicio-01/style.css
@@ -6,12 +6,12 @@
 }
   
 body {
-  background-color: rgb(247, 247, 247);
+  background-color: #f7f7f7
 }
   
 .header-container {
   display: flex;
-  background-color: #5C687C;
+  background-color: #5C687C
 }
   
 .logo-container {
@@ -22,24 +22,22 @@ body {
   
 .menu-container {
   display: flex;
-  flex-basis: 500px;
   align-self: center;
-  flex-grow: 1;
-  order: 2;
+  flex: 1 500px;
+  order: 1;
 }
   
 .menu-container ul {
   width: 100%;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
 }
   
 .menu-container li {
-  color: white;
-  font-weight: 500;
   font-size: 1.3rem;
+  font-weight: 500;
   list-style: none;
-  margin-right: 10px;
+  color: #ffffff
 }
 
 .main-container {
@@ -61,29 +59,27 @@ body {
 
 .card-container {
   display: flex;
-  flex-wrap: wrap;
   justify-content: space-around;
+  flex-wrap: wrap;
 }
 
 .card-container div {
-  align-items: center;
-  background-color: #5C687C;
-  border: black solid 1px;
-  display: flex;
   height: 150px;
-  justify-content: center;
   margin: 10px;
-  flex-basis: 16%;
-  flex-grow: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex: 1 16%;
+  border: black solid 1px;
+  background-color: #5C687C;
 }
 
 .aside-container {
+  margin: 20px;
   display: flex;
-  flex-basis: 350px;
   flex-direction: column;
   align-self: center;
-  flex-grow: 1;
-  margin: 20px;
+  flex: 1 350px;
 }
 
 .aside-container h3, h4 {
@@ -96,5 +92,4 @@ body {
   display: flex;
   align-self: center;
   text-align: justify;
-  
 }
